add squatchy message

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-Hey there.
+WELCOME TO THE SQAUTCH HUNT
 <br><div id="msg">Please Enable Javascript</div>
 <br><button onclick='login()'>LOGIN</button>
 
