--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@ WELCOME TO THE SQAUTCH HUNT
 <br><div id="msg">Please Enable Javascript</div>
 <br><button onclick='login()'>LOGIN</button>
 
-<a href="secret">Hey, wanna know a secret?</a>
+<a href="lounge">Come hang out in the SQUATCH lounge!</a>
 
 <script src="static/ethers-v4.min.js"></script>
 <script src="static/app.js"></script>
