--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
 <html>
 <body>
 WELCOME TO THE SQAUTCH HUNT
-<br><div id="msg">Please Enable Javascript</div>
-<br><button onclick='login()'>LOGIN</button>
+<br><br><div id="msg">Please Enable Javascript</div>
 
-<a href="lounge">Come hang out in the SQUATCH lounge!</a>
+<br><br>
+Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.
+
+<br><br><button onclick='register()'>REGISTER</button>
+
+<br><br><button onclick='login()'>LOGIN</button>
+
+<br><br>Once you get yourself logged in,
+<a href="lounge">come hang out in the SQUATCH lounge!</a>
 
 <script src="static/ethers-v4.min.js"></script>
 <script src="static/app.js"></script>
