--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,13 @@
 <html>
 <body>
-WELCOME TO THE SQAUTCH HUNT
+<b>WELCOME TO THE SQAUTCH HUNT</b>
 <br><br><div id="msg">Please Enable Javascript</div>
 
 <br><br>
 Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.
 
 <br><br><button onclick='register()'>REGISTER</button>
+<br><div id="flag"></div>
 
 <br><br><button onclick='login()'>LOGIN</button>
 
