set up the faucet for 200 and 300

--- a/templates/faucet.html
+++ b/templates/faucet.html
@@ -1,1 +1,19 @@
-this is a faucet
+<html>
+
+Hey there hunter, it's time to get yourself some SQUATCH tokens. The Sasquatch in this area love SQUATCH tokens. They eat them, or they smell really good or something. Point being, you want to get as many as you can to attract some premium squatch.<br><br>
+
+This is a simple token faucet. You hit the button, and you get some tokens. Since this is taking place on the Polygon network, you will need MATIC tokens to participate. If you don't have any, see <a href="freematic">here</a> for information on how to pick up some free MATIC for the purposes of this competiton.<br><br>
+
+Once you have a small bit of MATIC, you should be able to dispense your first SQUATCH tokens. This is all you need for the 200 flag. Tokens can only be dispensed once every 10 minutes, so if things are busy, you might have to wait your turn to participatea.<br><br>
+
+There are rumors that this token faucet might be a bit leaky as well, which can help you quickly obtain the 300 flag. Remember you can go back to the <a href="lounge">lounge</a> to see the flags you've earned.<br><br>
+
+<br><br><button onclick='faucetDispense()'>DISPENSE</button>
+<br><div id="dispense"></div><br><br>
+
+The SQUATCH token is at 0x4CE7De6fA65EEFc6B641054679141f08b8595d8f, and can be added to any wallet that supports ERC20 tokens.
+
+<script src="static/ethers-v4.min.js"></script>
+<script src="static/app.js"></script>
+
+</html>
