--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@ Hey you, squatch hunting is serious business, do you have a license to be here? 
 <br><div id="flag"></div>
 
 <br><br><button onclick='login()'>LOGIN</button>
+<br><div id="login"></div>
 
 <br><br>Once you get yourself logged in,
 <a href="lounge">come hang out in the SQUATCH lounge!</a>
