--- a/templates/faucet.html
+++ b/templates/faucet.html
@@ -9,7 +9,8 @@ Once you have a small bit of MATIC, you should be able to dispense your first SQ
 There are rumors that this token faucet might be a bit leaky as well, which can help you quickly obtain the 300 flag. Remember you can go back to the <a href="lounge">lounge</a> to see the flags you've earned.<br><br>
 
 <br><br><button onclick='faucetDispense()'>DISPENSE</button>
-<br><div id="dispense"></div><br><br>
+<br><div id="dispense"></div><br>
+<br><div id="msg"></div><br><br>
 
 The SQUATCH token is at 0x4CE7De6fA65EEFc6B641054679141f08b8595d8f, and can be added to any wallet that supports ERC20 tokens.
 
