--- a/templates/faucet.html
+++ b/templates/faucet.html
@@ -1,6 +1,6 @@
 <html>
 
-Hey there hunter, it's time to get yourself some SQUATCH tokens. The Sasquatch in this area love SQUATCH tokens. They eat them, or they smell really good or something. Point being, you want to get as many as you can to attract some premium squatch.<br><br>
+Hey there hunter, it's time to get yourself some SQUATCH tokens. The Sasquatch in this area love SQUATCH tokens. They eat them, or they smell really good or something. Point being, you want to get as many as you can get if you're hoping to attract some premium squatch.<br><br>
 
 This is a simple token faucet. You hit the button, and you get some tokens. Since this is taking place on the Polygon network, you will need MATIC tokens to participate. If you don't have any, see <a href="freematic">here</a> for information on how to pick up some free MATIC for the purposes of this competiton.<br><br>
 
