adding in basic casino features

--- a/templates/casino.html
+++ b/templates/casino.html
@@ -1,1 +1,10 @@
+<html>
+
 this is a casino
+<br><br>
+
+<br><br><button onclick='casinoGamble()'>GAMBLE</button>
+<br><div id="gamble"></div><br>
+<br><div id="msg"></div><br><br>
+
+</html>
