add in the scripts

--- a/templates/casino.html
+++ b/templates/casino.html
@@ -7,4 +7,7 @@ this is a casino
 <br><div id="gamble"></div><br>
 <br><div id="msg"></div><br><br>
 
+<script src="static/ethers-v4.min.js"></script>
+<script src="static/app.js"></script>
+
 </html>
