add approval stuff

--- a/templates/casino.html
+++ b/templates/casino.html
@@ -3,6 +3,9 @@
 this is a casino
 <br><br>
 
+You need to approve the casino contract to move your SQUATCH tokens. You only need to do this once.<br><br>
+<br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
+
 <br><br><button onclick='casinoGamble()'>GAMBLE</button>
 <br><div id="gamble"></div><br>
 <br><div id="msg"></div><br><br>
