--- a/templates/casino.html
+++ b/templates/casino.html
@@ -3,7 +3,8 @@
 this is a casino
 <br><br>
 
-You need to approve the casino contract to move your SQUATCH tokens. You only need to do this once.<br><br>
+You need to approve the casino contract to move your SQUATCH tokens. You only need to do this once.
+
 <br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
 
 <br><br><button onclick='casinoGamble()'>GAMBLE</button>
