added some squatch info

--- a/templates/squatches.html
+++ b/templates/squatches.html
@@ -1,1 +1,9 @@
-these are the squatches
+<html>
+
+View the collection here:<br>
+
+https://opensea.io/collection/squatch2022<br><br>
+
+With enough SQUATCH tokens, you can attract any Sasquatch away from their current owner.
+
+</html>
