everything is just fine

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
 <br><br>
 Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.
 
+<br><br>
+<b>NB: THE SITE ISN'T BROKEN, I'M JUST BAD AT MAKING PRETTY WEBSITES</b><br>
+If something seems broken, ping @deanpierce on twitter, or px on signal/discord
+
 <br><br><button onclick='register()'>REGISTER</button>
 <br><div id="flag"></div>
 
