add link to CTF

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@ If something seems broken, ping @deanpierce on twitter, or px on signal/discord
 
 <br><br><button onclick='register()'>REGISTER</button>
 <br><div id="flag"></div>
+<br>You can submit any flags you happen to find at <a href='https://bsidespdxctf.party/'>bsidespdxctf.party</a>
 
 <br><br><button onclick='login()'>LOGIN</button>
 <br><div id="login"></div>
