added note for where to get flag 500

--- a/templates/squatches.html
+++ b/templates/squatches.html
@@ -6,4 +6,6 @@ https://opensea.io/collection/squatch2022<br><br>
 
 With enough SQUATCH tokens, you can attract any Sasquatch away from their current owner.
 
+Have you gotten your squatch? Go to https://squatchhunt.com/squatch_club to claim Flag 500
+
 </html>
