--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <br><br><div id="msg">Please Enable Javascript</div>
 
 <br><br>
-Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.
+Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.<br>
+Something like Metamask on Chrome, or Brave should work.
 
 <br><br>
 <b>NB: THE SITE ISN'T BROKEN, I'M JUST BAD AT MAKING PRETTY WEBSITES</b><br>
