more hints related to Polygon

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 <br><br>
 Hey you, squatch hunting is serious business, do you have a license to be here? Ensure you are using a web3 capible browser, and then hit the "REGISTER" button.<br>
 Something like Metamask on Chrome, or Brave should work.
+<br><br>
+
+If you're having trouble switching to Polygon, visit a site like https://anyswap.exchange/#/bridge which will automatically fill in all the information you need.
 
 <br><br>
 <b>NB: THE SITE ISN'T BROKEN, I'M JUST BAD AT MAKING PRETTY WEBSITES</b><br>
