--- a/templates/casino.html
+++ b/templates/casino.html
@@ -7,6 +7,7 @@ You need to approve the casino contract to move your SQUATCH tokens. You only ne
 
 <br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
 
+<input id="bet" type="number" value="1" />
 <br><br><button onclick='casinoGamble()'>GAMBLE</button>
 <br><div id="gamble"></div><br>
 <br><div id="msg"></div><br><br>
