cleaned up ux, fixed typo in js

--- a/templates/casino.html
+++ b/templates/casino.html
@@ -7,6 +7,8 @@ You need to approve the casino contract to move your SQUATCH tokens. You only ne
 
 <br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
 
+<br><br>
+How much to gamble?? 
 <input id="bet" type="number" value="1" />
 <br><br><button onclick='casinoGamble()'>GAMBLE</button>
 <br><div id="gamble"></div><br>
