--- a/templates/casino.html
+++ b/templates/casino.html
@@ -5,6 +5,8 @@ this is a casino
 
 You need to approve the casino contract to move your SQUATCH tokens. You only need to do this once.
 
+<br><br> NOTE! Casino contract updated! you may need to re-approve!
+
 <br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
 
 <br><br>
