told people to go somewhere else

--- a/templates/casino.html
+++ b/templates/casino.html
@@ -7,6 +7,8 @@ You need to approve the casino contract to move your SQUATCH tokens. You only ne
 
 <br><br> NOTE! Casino contract updated! you may need to re-approve!
 
+<br><br>If this website isn't working super well for you, you might have more luck using polygonscan or remix to send the transactions. https://polygonscan.com/address/0xd605f050c1baaBB564D0f391980d2c14f1B7dd50#writeContract
+
 <br><br><button onclick='approveCasino()'>APPROVE CASINO</button>
 
 <br><br>
