--- a/templates/squatches.html
+++ b/templates/squatches.html
@@ -4,7 +4,22 @@ View the collection here:<br>
 
 https://opensea.io/collection/squatch2022<br><br>
 
-With enough SQUATCH tokens, you can attract any Sasquatch away from their current owner.
+With enough SQUATCH tokens, you can attract any Sasquatch away from their current owner.<br><br>
+
+
+<br><br>
+Must approve the game contract first.
+<button onclick='approveBribes()'>APPROVE</button><br>
+
+Did you check out those squatches? Do you want one?<br>
+<input id="squatch" type="number" value="1" />
+<br>
+
+<br><br><button onclick='checkPrice()'>CHECK COST</button><br>
+<br><div id="price"></div><br><br>
+<br><br><button onclick='lureSquatch()'>LURE SQUATCH</button><br><br>
+
+<br><div id="msg"></div><br><br>
 
 Have you gotten your squatch? Go to https://squatchhunt.com/squatch_club to claim Flag 500
 
