add in the actual js

--- a/templates/squatches.html
+++ b/templates/squatches.html
@@ -23,4 +23,7 @@ Did you check out those squatches? Do you want one?<br>
 
 Have you gotten your squatch? Go to https://squatchhunt.com/squatch_club to claim Flag 500
 
+<script src="static/ethers-v4.min.js"></script>
+<script src="static/app.js"></script>
+
 </html>
